--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="navbar__links-item"><a href="https://github.com/Jayesh3636" target="_blank">GITHUB</a> </li>
                 <li class="navbar__links-item"><a href="">DRIBBLE</a> </li>
                 <li class="navbar__links-item"><a href="">BLOG</a> </li>
-                <li class="navbar__links-item"><a href="">RESUME</a> </li>
+                <li class="navbar__links-item"><a href="resume.html">RESUME</a> </li>
             </ul>
 
         </nav>
