--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
                     </svg>
             </div>
             <ul class="navbar__links">
-                <li class="navbar__links-item"><a href="">PORTFOLIO</a> </li>
+                <li class="navbar__links-item"><a href="index.html">PORTFOLIO</a> </li>
                 <li class="navbar__links-item"><a href="https://github.com/Jayesh3636" target="_blank">GITHUB</a> </li>
                 <li class="navbar__links-item"><a href="">DRIBBLE</a> </li>
                 <li class="navbar__links-item"><a href="">BLOG</a> </li>
