--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+    <title>Resume</title>
     <link rel = "icon" href = 
         "JCREA-icon.svg">
 </head>
@@ -48,8 +48,8 @@
                 <li class="navbar__links-item"><a href="index.html">PORTFOLIO</a> </li>
                 <li class="navbar__links-item"><a href="https://github.com/Jayesh3636" target="_blank">GITHUB</a> </li>
                 <li class="navbar__links-item"><a href="">DRIBBLE</a> </li>
-                <li class="navbar__links-item"><a href="">BLOG</a> </li>
-                <li class="navbar__links-item"><a href="Resume_jayesh_patil_JCREA.jpg">RESUME</a> </li>
+                <li class="navbar__links-item"><a href="Blogspot.html">BLOG</a> </li>
+                <li class="navbar__links-item"><a href="resume.html">RESUME</a> </li>
             </ul>
 
         </nav>
