--- a/projects.html
+++ b/projects.html
@@ -522,7 +522,7 @@
     <p class="abouttext"></p>
 
 
-        <div class="blog-wrapper">
+        <div class="projects-wrapper">
             <div><ul class="no-bullets">
 
 
