--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
-    <link rel = "icon" href = 
-        "JCREA-icon.svg">
+    <link rel = "icon" href ="JCREA-icon.svg">
 </head>
 
 <body>
