--- a/projects/projects.html
+++ b/projects/projects.html
@@ -501,8 +501,8 @@
             <div class="middle-text">
                 <div class="centered-block">
                  <h1 class="blog__title">
-                        Welcome to my Blogspot!<br>
-                        <span class="hero__title-intro">I do like to blog sometimes</span>
+                        Well it wasn't simple at all to code as I'm a designer<br>
+                        <span class="hero__title-intro">but I have really made those from sratch <br> thankyou teamtanay </span>
                     </h1>
             
                     </div>
