--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <ul class="navbar__links">
                 <li class="navbar__links-item"><a href="">PORTFOLIO</a> </li>
                 <li class="navbar__links-item"><a href="https://github.com/Jayesh3636" target="_blank">GITHUB</a> </li>
-                <li class="navbar__links-item"><a href="projects.html">PROJECTS</a> </li>
+                <li class="navbar__links-item"><a href="https://projects-jcrea.netlify.app/">PROJECTS</a> </li>
                 <li class="navbar__links-item"><a href="Blogspot.html">BLOG</a> </li>
                 <li class="navbar__links-item"><a href="resume.html">RESUME</a> </li>
             </ul>
