--- a/projects/projects.html
+++ b/projects/projects.html
@@ -614,13 +614,13 @@
                           <a
                             class="links link-primary"
                             target="_blank"
-                            href="https://replit.com/@JayeshPatil10/Second-programm#index.js"
+                            href="https://piratetranslation-jcrea.netlify.app/"
                             >Visit</a
                           >
                           <a
                             class="links link-secondary"
                             target="_blank"
-                            href="https://github.com/Jayesh3636/mark-2-Adode-suits-quiz"
+                            href="https://github.com/Jayesh3636/Mark-7-pirate-api-translator"
                             >Source Code</a
                           >
                         </div>
