--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </svg>
             </div>
             <ul class="navbar__links">
-                <li class="navbar__links-item"><a href="">PORTFOLIO</a> </li>
+                <li class="navbar__links-item"><a href="https://portfolio-jcrea.netlify.app/">PORTFOLIO</a> </li>
                 <li class="navbar__links-item"><a href="https://github.com/Jayesh3636" target="_blank">GITHUB</a> </li>
                 <li class="navbar__links-item"><a href="https://projects-jcrea.netlify.app/">PROJECTS</a> </li>
                 <li class="navbar__links-item"><a href="https://blogspot-jcrea.netlify.app/">BLOG</a> </li>
@@ -141,7 +141,7 @@
                     </div>
 
 
-                    <div>
+                    <div class="info">
                         <ul class="no-bullets">
                             <li>
                                 <h3 class="skills-title">
