content updation (about text)

--- a/index.html
+++ b/index.html
@@ -93,10 +93,12 @@
 
         <center>
             <div class="abouttext">
-                <P>My name is Jayesh Patil. I’m a Freelancer 3 years of Graphic Designing Experince and a keen eye for
+                <P>My name is Jayesh Patil. I’m a Frontend Developer with full stack background and a keen eye for
                     good design.
-                    I love to make complex things simple and joy to use. Currently, I am building my first portfolio
-                    website</P>
+                    I love to make complex things simple and joy to use. Currently, I am developing my first portfolio
+                    website with HTML, CSS & JAVASCRIPT.</P> 
+                    <P> Over the past 2 years,  I've gained experience about frontend designing including graphic designing and video editing. I am Passionate about implementing and launching new projects. I have ability to translate buiness requiremensts into technical solution.
+                    .</P>
             </div>
         </center>
 
