--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <P>My name is Jayesh Patil. I’m a Frontend Developer with full stack background and a keen eye for
                     good design.
                     I love to make complex things simple and joy to use. Currently, I am developing my first portfolio
-                    website with HTML, CSS & JAVASCRIPT.</P> 
+                    website with HTML, CSS & JAVASCRIPT.<br><br><br></P> 
                     <P> Over the past 2 years,  I've gained experience about frontend designing including graphic designing and video editing. I am Passionate about implementing and launching new projects. I have ability to translate buiness requiremensts into technical solution.
                     .</P>
             </div>
