added js and updated responsive body css

--- a/index.html
+++ b/index.html
@@ -100,18 +100,18 @@
 
             </div>
         </section>
-
-        <center>
+<section>
+        
             <div class="abouttext">
                 <P>My name is Jayesh Patil. I’m a Frontend Developer with full stack background and a keen eye for
                     good design.
                     I love to make complex things simple and joy to use. Currently, I am developing my first portfolio
-                    website with HTML, CSS & JAVASCRIPT.<br><br><br></P> 
+                    website with <strong> HTML, CSS & JAVASCRIPT.</strong><br><br><br></P> 
                     <P> Over the past 2 years,  I've gained experience about frontend designing including graphic designing and video editing. I am Passionate about implementing and launching new projects. I have ability to translate buiness requiremensts into technical solution.
                     .</P>
             </div>
-        </center>
-
+        
+    </section>
         <div>
             <section class="technicalskillbg">
                 <h2 class="h2-ts"> Technical Skills </h2>
