--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </nav>
       </header>
     <main class="section">
-        <section class="middle-content">
+        <section class="middle-content hero">
             <div><svg class="profile-photo" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" width="400" height="450" viewBox="0 0 626.774 672.022">
                     <defs>
