style: updated class name

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <ul class="no-bullets">
                             <li>
                                 <h3 class="skills-title">
-                                    <span>
+                                    <div class="skills_logo">
                                         <svg width="32px" height="32px" viewBox="0 0 256 289" version="1.1"
                                             xmlns="http://www.w3.org/2000/svg"
                                             xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
@@ -135,8 +135,8 @@
                                                     fill="#539E43"></path>
                                             </g>
                                         </svg>
-                                    </span>
-                                    <span>Javascript</span></h3>
+                                    </DIV>
+                                    <span class="skills_name">Javascript</span></h3>
                                 <span class="skills-desc">
                                     <p>I'm newbie to this field of developing and am learning everything from sratch
                                         itself so lets see how it goes!
