update in UI 0.02

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
     <header class="header">
-        <nav class="navbar nav-container" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-duration="400" id="Navigation" style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg);transform-style: preserve-3d;">
+        <nav class="navbar nav-container" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner"
+            data-duration="400"
+            style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg);transform-style: preserve-3d;">
             <div class="logo">
 
                 <svg width="auto" height="25" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -118,6 +120,37 @@
                         src="https://assets.website-files.com/5f067b661807eb95a36fe56a/5f067b661807eb23b86fe5ce_Facebook%20Dark.svg"
                         alt="" class="social-icon"></a></div>
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <div>
             <section class="technicalskillbg">
@@ -334,24 +367,136 @@
                 </div>
         </div>
         </section>
+
+
+
+
+
+
+
+
+
+
+
         <section class="about" id="about" style="padding-top: 150px;">
             <div class="container">
-            <div class="title">Nice to meet you.</div>
-            <h1 class="h1-title heading-width">
-            Hey, I'm <strong>Jayesh</strong>, <br>UI Designer and Developer</h1>
-            <div class="abouttext">
-                <P>My name is Jayesh Patil. I’m a Frontend Developer with full stack background and a keen eye for
-                    good design.
-                    I love to make complex things simple and joy to use. Currently, I am developing my first portfolio
-                    website with <strong> HTML, CSS & JAVASCRIPT.</strong><br><br><br></P> 
-                    <P> Over the past 2 years,  I've gained experience about frontend designing including graphic designing and video editing. I am Passionate about implementing and launching new projects. I have ability to translate buiness requiremensts into technical solution.
-                    .</P>
+                <div class="title">Nice to meet you.</div>
+                <h1 class="h1-title heading-width">
+                    Hey, I'm <strong>Jayesh</strong>, <br>UI Designer and Developer</h1>
+                <div class="abouttext">
+                    <P>My name is Jayesh Patil. I’m a Frontend Developer with full stack background and a keen eye for
+                        good design.
+                        I love to make complex things simple and joy to use. Currently, I am developing my first
+                        portfolio
+                        website with <strong> HTML, CSS & JAVASCRIPT.</strong><br><br><br></P>
+                    <P> Over the past 2 years, I've gained experience about frontend designing including graphic
+                        designing and video editing. I am Passionate about implementing and launching new projects. I
+                        have ability to translate buiness requiremensts into technical solution.
+                        .</P>
+                </div>
+                <div class="small-profile-tab">
+                    <div class="profile-picture"><img src="profile-photo.svg" alt="JCREA-profile"></div>
+                    <div class="profile-name-wrapper">
+                        <p class="profile-name">Jayesh Patil</p>
+                        <div class="detail">Devloper at Cognizant</div>
+
+
+
+                    </div>
+                </div>
+                <div class="about-social-wrapper layout-grid">
+                    <a href="https://www.linkedin.com/in/jayesh-patil-150b60150/" target="_blank" class="abt-social-icon w-inline-block">
+                        <img src="Daco_53359.png"
+                            alt="" class="social-logo">
+                        <div class="social-name">Linkedin</div>
+                    </a>
+                    <a href="https://www.instagram.com/_.__jayesh__._/" target="_blank" class="abt-social-icon w-inline-block">
+                        <img src="insta.png"
+                            alt="" class="social-logo">
+                        <div class="social-name">Instagram</div>
+                    </a>
+                    <a href="https://api.whatsapp.com/send?phone=+917738443636&text=Hi%21%20Jayesh%21" target="_blank" class="abt-social-icon w-inline-block">
+                        <img src="whatsapp_icon.png"
+                            alt="" class="social-logo">
+                        <div class="social-name">WhatsApp</div>
+                    </a>
+                    <a href="http://www.slack.com" target="_blank" class="abt-social-icon w-inline-block">
+                        <img src="https://assets.website-files.com/5f067b661807eb95a36fe56a/5f067b661807eb82d06fe620_Logo%20Dribbble.svg" alt="" class="social-logo">
+                        <div class="social-name">Dribbble</div>
+                    </a>
+
+
+                </div>
             </div>
-        </div>
-        <div style="height: 739.8px; " class="bg-block-blue"></div>
-    </section>
+
+
+            <div style="height: 1039.8px; " class="bg-block-blue"></div>
+        </section>
         <script src="script.js"></script>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <footer class="footer">
         <center>
             <div class="footer-container">
