fix social media hanging icons

--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
         <section>
             <div class="social-navigation">
                 <a href="http://dribbble.com" class="social-link w-inline-block"><img
-                        src="https://assets.website-files.com/5f067b661807eb95a36fe56a/5f067b661807eb16356fe5cf_Dribbble%20Dark.svg"
+                        src="Asset 3linkedin.svg"
                         alt="" class="social-icon"></a>
                 <a href="http://instagram.com" class="social-link w-inline-block"><img
-                        src="https://assets.website-files.com/5f067b661807eb95a36fe56a/5f067b661807ebc9c06fe5d0_Instagram%20Dark.svg"
+                        src="Asset 2insta.svg"
                         alt="" class="social-icon"></a>
                 <a href="http://twitter.com" class="social-link w-inline-block"><img
-                        src="https://assets.website-files.com/5f067b661807eb95a36fe56a/5f067b661807eb68f66fe5d2_Twitter%20Dark.svg"
+                        src="twitter.svg"
                         alt="" class="social-icon"></a>
                 <a href="http://facebook.com" class="social-link w-inline-block"><img
-                        src="https://assets.website-files.com/5f067b661807eb95a36fe56a/5f067b661807eb23b86fe5ce_Facebook%20Dark.svg"
+                        src="facebook.svg"
                         alt="" class="social-icon"></a></div>
         </section>
 
@@ -430,7 +430,7 @@
             </div>
 
 
-            <div style="height: 1039.8px; " class="bg-block-blue"></div>
+            <!-- <div style="height: 1039.8px; " class="bg-block-blue"></div> -->
         </section>
         <script src="script.js"></script>
     </main>
