links added in social media icons

--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
 
         <section>
             <div class="social-navigation">
-                <a href="http://dribbble.com" class="social-link w-inline-block"><img
+                <a href="https://www.linkedin.com/in/jayesh-patil-150b60150/" class="social-link w-inline-block"><img
                         src="Asset 3linkedin.svg"
                         alt="" class="social-icon"></a>
-                <a href="http://instagram.com" class="social-link w-inline-block"><img
+                <a href="https://www.instagram.com/_.__jayesh__._/" class="social-link w-inline-block"><img
                         src="Asset 2insta.svg"
                         alt="" class="social-icon"></a>
-                <a href="http://twitter.com" class="social-link w-inline-block"><img
+                <a href="https://twitter.com/Jayesh3636" class="social-link w-inline-block"><img
                         src="twitter.svg"
                         alt="" class="social-icon"></a>
-                <a href="http://facebook.com" class="social-link w-inline-block"><img
+                <a href="http://facebook.com/patil70" class="social-link w-inline-block"><img
                         src="facebook.svg"
                         alt="" class="social-icon"></a></div>
         </section>
