--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             </div>
 
 
-            <!-- <div style="height: 1039.8px; " class="bg-block-blue"></div> -->
+            <div style="height: 1039.8px; " class="bg-block-blue"></div>
         </section>
         <script src="script.js"></script>
     </main>
