--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@
 
 
 
-        <section class="about" id="about" style="padding-top: 150px;">
+        <section class="about" id="about" >
+            <div style="height: 1039.8px; " class="bg-block-blue"></div>
             <div class="container">
                 <div class="title">Nice to meet you.</div>
                 <h1 class="h1-title heading-width">
@@ -420,7 +421,7 @@
                             alt="" class="social-logo">
                         <div class="social-name">WhatsApp</div>
                     </a>
-                    <a href="http://www.slack.com" target="_blank" class="abt-social-icon w-inline-block">
+                    <a href="WWW.DRIBBBLE.COM" target="_blank" class="abt-social-icon w-inline-block">
                         <img src="https://assets.website-files.com/5f067b661807eb95a36fe56a/5f067b661807eb82d06fe620_Logo%20Dribbble.svg" alt="" class="social-logo">
                         <div class="social-name">Dribbble</div>
                     </a>
@@ -430,7 +431,7 @@
             </div>
 
 
-            <div style="height: 1039.8px; " class="bg-block-blue"></div>
+           
         </section>
         <script src="script.js"></script>
     </main>
