--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
 
     <header class="header">
-        <nav class="navbar nav-container" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner"
-            data-duration="400"
-            style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg);transform-style: preserve-3d;">
+        <nav class="navbar nav-container" >
             <div class="logo">
 
                 <svg width="auto" height="25" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -161,9 +159,9 @@
                     job.</p>
 
 
-                <div class="wrapper">
+                <div class="wrapper ">
                     <div>
-                        <ul class="no-bullets">
+                        <ul class="no-bullets ">
                             <li class="skills_background">
                                 <h3 class="skills-title">
                                     <span>
@@ -399,7 +397,7 @@
                     <div class="profile-picture"><img src="profile-photo.svg" alt="JCREA-profile"></div>
                     <div class="profile-name-wrapper">
                         <p class="profile-name">Jayesh Patil</p>
-                        <div class="detail">Devloper at Cognizant</div>
+                        <div class="detail">Programmer Analyst at Cognizant</div>
 
 
 
